--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -15,3 +15,10 @@ cursed-car-ug = Cursed Car
 [technology-name]
 cursed-railway-ug = Cused Railway Tech
 cursed-automobilism-ug = Cursed Automobile
+
+[recipe-name]
+cursed-locomotive-ug = Cursed Locomotive
+cursed-straight-rail-ug = Cursed Rail
+cursed-curved-rail-ug = Cursed Curved Rail
+cursed-cargo-wagon-ug = Cursed Cargo Wagon
+cursed-car-ug = Cursed Car
